add another capture hook

--- a/emacs.org
+++ b/emacs.org
@@ -3070,6 +3070,9 @@ Miscellaneous notes:
                                 ("rw" "Web Page" entry (file+olp+datetree "~/forge/articles.org")
                                  (function forge/org-clip-web-page) :prepend t)
 
+                                ("rf" "Elfeed/News Article" entry (file+olp+datetree "~/forge/articles.org")
+                                 "* %a %? :ARTICLE:\n:PROPERTIES:\n:ID:       %(shell-command-to-string \"uuidgen\"):CREATED:  %U\n:END:\n" :prepend t)
+
                                 ("t" "To do" entry (file+headline "~/forge/journal.org" "Inbox")
                                  "* TODO %? \n:PROPERTIES:\n:ID:       %(shell-command-to-string \"uuidgen\"):CREATED:  %U\n:END:\nReference: %a\n" :prepend t)
 
