--- a/emacs.org
+++ b/emacs.org
@@ -1951,8 +1951,7 @@ This includes things like folding XML sections.
 (use-package hideshow
   :diminish hs-minor-mode
   :hook ((prog-mode text-mode) . hs-minor-mode)
-  :bind (:map prog-mode-map
-              ("C-c h" . hs-toggle-hiding)))
+  :bind (("C-c h" . hs-toggle-hiding)))
 #+end_src
 ** Network device configurations
 *** Junos
