--- a/emacs.org
+++ b/emacs.org
@@ -808,9 +808,9 @@ Sometimes installing a new package will bork packages.  This will recompile the
 This defines what package archives are used and then initializes =package=.
 
 #+begin_src emacs-lisp
-(setq package-archives '(("org" . "https://orgmode.org/elpa/")
-                         ("melpa" . "http://melpa.org/packages/")
-                         ("gnu" . "http://elpa.gnu.org/packages/")))
+(setq package-archives '(("nongnu" . "https://elpa.nongnu.org/nongnu/")
+                         ("melpa" . "https://melpa.org/packages/")
+                         ("gnu" . "https://elpa.gnu.org/packages/")))
 #+end_src
 ** =use-package=
 I find the [[https://github.com/jwiegley/use-package][use-package]] macro makes a configuration easier to read and more declarative.  This
