comment out block that attempts to look up soa info

--- a/emacs.org
+++ b/emacs.org
@@ -443,12 +443,12 @@ Look up =PTR= information for an IP.
           (setq rr (list (cons rrtype (cadr (assoc 'data arg2)))))
           (setq answer (append rr answer)))))
     ;; pull in authority information from SOA
-    (when (assoc 'authorities result)
-      (setq answer (append
-                    (list
-                     (cons 'soa-mname (cadr (assoc 'mname (cadr (assoc 'data (nth 0 (cadr (assoc 'authorities result))))))))
-                     (cons 'soa-rname (cadr (assoc 'rname (cadr (assoc 'data (nth 0 (cadr (assoc 'authorities result)))))))))
-                    answer)))
+    ;; (when (assoc 'authorities result)
+    ;;   (setq answer (append
+    ;;                 (list
+    ;;                  (cons 'soa-mname (cadr (assoc 'mname (cadr (assoc 'data (nth 0 (cadr (assoc 'authorities result))))))))
+    ;;                  (cons 'soa-rname (cadr (assoc 'rname (cadr (assoc 'data (nth 0 (cadr (assoc 'authorities result)))))))))
+    ;;                 answer)))
     (when (called-interactively-p 'interactive)
       (message "%s" answer))
     answer))
