update vpn-connect function for wireguard

--- a/emacs.org
+++ b/emacs.org
@@ -678,6 +678,25 @@ Helpers to connect and disconnect from a VPN session.
 (when (forge/system-type-darwin-p)
   (defun vpn-connect ()
     "Connect to VPN configuration CFG.
+Assumes you are are on MacOS and using Wireguard to connect."
+    (interactive)
+    (require 'em-glob)
+    (let ((cfg (completing-read "Config: "
+                                (mapcar #'file-name-sans-extension
+                                        (directory-files "~/annex/etc" nil (eshell-glob-regexp "wg*conf"))))))
+      (setq forge/vpn-config cfg)
+      (when (forge/system-type-darwin-p)
+        (shell-command (concat "scutil --nc start " cfg)))))
+
+  (defun vpn-disconnect ()
+    "Disconnect VPN configuration CFG.
+Assumes you are are on MacOS and using Wireguard to connect."
+    (interactive)
+    (when (forge/system-type-darwin-p)
+      (shell-command (concat "scutil --nc stop " forge/vpn-config))))
+
+  (defun openvpn-connect ()
+    "Connect to OpenVPN configuration CFG.
 Assumes you are on MacOS and using Tunnelblick to connect."
     (interactive)
     (require 'em-glob)
@@ -692,7 +711,7 @@ Assumes you are on MacOS and using Tunnelblick to connect."
                                 "end tell"))
           (do-applescript osatmpl)))))
 
-  (defun vpn-disconnect ()
+  (defun openvpn-disconnect ()
     "Disconnect from VPN.
 Assumes you are on MacOS and using Tunnelblick to manage your VPN."
     (interactive)
