--- a/emacs.org
+++ b/emacs.org
@@ -2512,7 +2512,7 @@ Notes:
 (with-eval-after-load 'message
   (setq mail-from-style 'angles
         message-kill-buffer-on-exit t
-        message-forward-as-mime nil
+        message-forward-as-mime t
         message-citation-line-format "On %a, %Y-%m-%d at %T %z, %N wrote:"
         message-citation-line-function (quote message-insert-formatted-citation-line)
         message-make-forward-subject-function (quote message-forward-subject-fwd)
