when refiling with org, refile to the top

--- a/emacs.org
+++ b/emacs.org
@@ -3184,6 +3184,7 @@ Miscellaneous notes:
   (org-src-fontify-natively t)
   (org-startup-folded 'content)
   (org-babel-python-command "python3")
+  (org-reverse-note-order t)
   (org-list-demote-modify-bullet '(("+" . "-") ("-" . "+") ("*" . "+") ("1." . "a.")))
 
   :bind
