rename to org-table-export and give a prompt for interactive

--- a/emacs.org
+++ b/emacs.org
@@ -3409,9 +3409,9 @@ associated with the entry.
     (setq song-info (if itunes-song itunes-song mpd-song))
     (concat (car song-info) ", \"" (car (cdr song-info)) "\"")))
 
-(defun forge/org-tbl-export (name)
+(defun forge/org-table-export (name)
   "Search for table named `NAME` and export"
-  (interactive "s")
+  (interactive "sTable: ")
   (outline-show-all)
   (push-mark)
   (goto-char (point-min))
