auto detect eos files

--- a/emacs.org
+++ b/emacs.org
@@ -1991,6 +1991,7 @@ This includes things like folding XML sections.
 (use-package eos-mode
   :quelpa (eos-mode :fetcher github :repo "sfromm/eos-mode")
   :commands (eos-mode)
+  :magic ("!RANCID-CONTENT-TYPE: arista" . eos-mode)
   :hook (eos-mode . highlight-indent-guides-mode))
 #+end_src
 ** Ledger
