add ol-notmuch to org-modules

--- a/emacs.org
+++ b/emacs.org
@@ -3317,7 +3317,7 @@ Miscellaneous notes:
   (setq org-tags-exclude-from-inheritance '("crypt"))
   ;;
   (setq org-columns-default-format "%50ITEM(Task) %2PRIORITY %10Effort(Effort){:} %10CLOCKSUM"
-        org-modules '(org-id ol-eww org-bbdb org-bibtex ol-docview org-info org-irc org-habit)
+        org-modules '(org-id ol-eww org-bbdb org-bibtex ol-docview org-info org-irc org-habit ol-notmuch)
         org-src-preserve-indentation t
         org-src-window-setup 'current-window                    ;; use current window when editing a source block
         org-cycle-separator-lines 2                             ;; leave this many empty lines in collapsed view
@@ -3344,7 +3344,6 @@ Miscellaneous notes:
 *** Org Mode, Notmuch and mail
 #+begin_src emacs-lisp
 (use-package ol-notmuch
-  :defer t
   :after
   (:any org notmuch))
 #+end_src
