functions to start and stop elfeed timer

--- a/emacs.org
+++ b/emacs.org
@@ -3698,6 +3698,17 @@ articles every 2 hours.
         ("e" . elfeed-show-open-eww)
         ("f" . forge/elfeed-show-toggle-starred)
         ("o" . elfeed-show-mpv))
+  :preface
+  (defun forge/elfeed-stop-timer ()
+    "Cancel elfeed-update-timer."
+    (interactive)
+    (when elfeed-update-timer (cancel-timer elfeed-update-timer)))
+
+  (defun forge/elfeed-start-timer ()
+    "Start elfeed-update-timer."
+    (interactive)
+    (setq elfeed-update-timer (run-at-time 180 (* 120 60) 'forge/elfeed-update)))
+
   :config
   (defun elfeed-search-mpv ()
     "Play the current entry with mpv"
