update to current method of configuring modus themes

--- a/emacs.org
+++ b/emacs.org
@@ -1005,8 +1005,7 @@ looks good.  It will also define a default theme to start with.
   (dolist (p '(doom-themes           ;; https://github.com/hlissner/emacs-doom-themes
                leuven-theme          ;; https://github.com/fniessen/emacs-leuven-theme
                material-theme        ;; https://github.com/cpaulik/emacs-material-theme
-               modus-operandi-theme  ;; https://gitlab.com/protesilaos/modus-themes
-               modus-vivendi-theme   ;; https://gitlab.com/protesilaos/modus-themes
+               modus-themes          ;; https://gitlab.com/protesilaos/modus-themes
                poet-theme            ;; https://github.com/kunalb/poet
                solarized-theme       ;; https://github.com/bbatsov/solarized-emacs
                spacemacs-theme       ;; https://github.com/nashamri/spacemacs-theme
@@ -1035,13 +1034,13 @@ looks good.  It will also define a default theme to start with.
   :config
   (doom-themes-org-config))
 
-(use-package modus-operandi-theme
+(use-package modus-themes
+  :hook
+  (modus-themes-after-load-theme . forge/lin-macos-system-colors)
   :custom
-  (modus-operandi-theme-scale-headings t))
-
-(use-package modus-vivendi-theme
-  :custom
-  (modus-vivendi-theme-scale-headings t))
+  (modus-themes-scale-headings t)
+  :init
+  (modus-themes-load-themes))
 
 (use-package tron-legacy-theme
   :custom
