--- a/emacs.org
+++ b/emacs.org
@@ -1130,20 +1130,21 @@ The following are modes I no longer use.  Configuration is here for reference.
 
 #+begin_src emacs-lisp
 (use-package lin
-  :quelpa (lin :fetcher git :url "https://gitlab.com/protesilaos/lin.git"))
+  :quelpa (lin :fetcher git :url "https://gitlab.com/protesilaos/lin.git")
+  :config
+  (dolist (hook '(elfeed-search-mode-hook notmuch-search-mode-hook package-menu-mode-hook))
+    (add-hook hook #'lin-mode)))
 
 ;; https://gitlab.com/protesilaos/lin/
 (defun forge/lin-macos-system-colors ()
   "Change foreground and background colors of this line."
   (interactive)
   (when (forge/system-type-darwin-p)
-    (set-face-attribute 'lin-hl nil
-                        :background "selectedContentBackgroundColor")
-
-    ;; To also override the foreground (see `lin-override-foreground'):
-    (set-face-attribute 'lin-hl-override-fg nil
+    (set-face-attribute 'hl-line nil
                         :foreground "alternateSelectedControlTextColor"
                         :background "selectedContentBackgroundColor")))
+(add-hook 'ns-system-appearance-change-functions #'forge/lin-macos-system-colors)
+
 #+end_src
 * User interface elements
 This section configures those pieces of Emacs where I can affect how I interact
