enable modus-themes-mixed-fonts

--- a/emacs.org
+++ b/emacs.org
@@ -1039,6 +1039,7 @@ looks good.  It will also define a default theme to start with.
   (modus-themes-after-load-theme . forge/lin-macos-system-colors)
   :custom
   (modus-themes-scale-headings t)
+  (modus-themes-mixed-fonts t)
   :init
   (modus-themes-load-themes))
 
